--- a/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
+++ b/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: 250px;
-  width: -webkit-fill-available;
+  width: 30%;
   height: fit-content;
   //   visibility: visible;
   opacity: 1;
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: column;
   max-width: 250px;
-  width: -webkit-fill-available;
+  width: 70%;
   //   visibility: hidden;
   height: fit-content;
   opacity: 0;
