--- a/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
+++ b/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
@@ -3,6 +3,13 @@
   flex-direction: column;
   max-width: 800px;
   margin: 0 auto;
+  width: calc(100vw - (100vw - 100%));
+  // overflow-x: hidden;
+  // overflow-y: hidden;
+
+  // @media screen and (max-width: 760px){
+  //   .container{ width: 100vw; margin: 0; padding: 0; }
+  // }
 
   > h1 {
     align-self: center;
@@ -30,6 +37,7 @@
     .playlistRows {
       display: flex;
       flex-direction: column;
+      width: 70%;
 
       p {
         margin-top: 0px;
