--- a/src/components/PlaylistRow/PlaylistRow.module.scss
+++ b/src/components/PlaylistRow/PlaylistRow.module.scss
@@ -11,6 +11,7 @@
     img {
       min-width: 60px;
       min-height: 60px;
+      align-self: center;
     }
 
     .textWrapper {
@@ -24,6 +25,11 @@
         margin: 0px;
         font-size: 15pt;
         font-weight: 500;
+        word-wrap: break-word;
+        display: table;
+        table-layout: fixed;
+        width: 100%;
+        word-wrap: break-word;
       }
 
       .subInfo {
@@ -48,6 +54,6 @@
     -webkit-transform: scale(1.5); /* Safari and Chrome */
     -o-transform: scale(1.5); /* Opera */
     transform: scale(1.5);
-    margin: 20px;
+    margin: 1em;
   }
 }
