--- a/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
+++ b/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
@@ -10,6 +10,8 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  margin-right: 1em;
+  margin-top: 1em;
 
   > b {
     font-weight: 500;
@@ -34,10 +36,12 @@
   display: flex;
   flex-direction: column;
   max-width: 250px;
-  width: 70%;
+  width: 30%;
   //   visibility: hidden;
   height: fit-content;
   opacity: 0;
+  margin-right: 1em;
+  margin-top: 1em;
   transition: visibility 0.5s 0.5s, opacity 0.5s linear;
 
   > b {
