--- a/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
+++ b/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
@@ -10,8 +10,9 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  margin-right: 1em;
-  margin-top: 1em;
+  margin-left: 1vw;
+  margin-right: 1vw;
+  padding-top: 1vw;
 
   > b {
     font-weight: 500;
@@ -40,8 +41,9 @@
   //   visibility: hidden;
   height: fit-content;
   opacity: 0;
-  margin-right: 1em;
-  margin-top: 1em;
+  margin-left: 1vw;
+  margin-right: 1vw;
+  padding-top: 1vw;
   transition: visibility 0.5s 0.5s, opacity 0.5s linear;
 
   > b {
