--- a/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
+++ b/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
@@ -13,11 +13,15 @@
 
   > h1 {
     align-self: center;
+    margin-left: 1vw;
+    margin-right: 1vw;
   }
 
   > p {
     align-self: center;
     margin-bottom: 3em;
+    margin-left: 1vw;
+    margin-right: 1vw;
   }
 
   .loginButton {
@@ -38,6 +42,8 @@
       display: flex;
       flex-direction: column;
       width: 70%;
+      margin-left: 1vw;
+      margin-right: 1vw;
 
       p {
         margin-top: 0px;
