Added word wrap to combined playlist

--- a/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
+++ b/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
@@ -30,6 +30,13 @@
   > ul {
     margin-top: 8px;
     margin-bottom: 8px;
+
+    > li {
+      display: table;
+      table-layout: fixed;
+      width: 100%;
+      word-wrap: break-word;
+    }
   }
 }
 
