--- a/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
+++ b/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
@@ -44,6 +44,7 @@
       width: 70%;
       margin-left: 1vw;
       margin-right: 1vw;
+      padding-top: 1vw;
 
       p {
         margin-top: 0px;
