--- a/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
+++ b/src/components/CombinedPlaylist/CombinedPlaylist.module.scss
@@ -37,36 +37,21 @@
       word-wrap: break-word;
     }
   }
+
+  .msg1 {
+    opacity: 0%;
+    text-align: center;
+    animation-name: fadeInOut;
+    animation-duration: 2s;
+  }
+
+  .msg2 {
+    opacity: 0%;
+  }
+
+  @keyframes fadeInOut {
+    0% { opacity: 0; }
+    40%, 70% { opacity: 1; }
+    100% { opacity: 0%; }
 }
-
-.hidden {
-  display: flex;
-  flex-direction: column;
-  max-width: 250px;
-  width: 30%;
-  //   visibility: hidden;
-  height: fit-content;
-  opacity: 0;
-  margin-left: 1vw;
-  margin-right: 1vw;
-  padding-top: 1vw;
-  transition: visibility 0.5s 0.5s, opacity 0.5s linear;
-
-  > b {
-    font-weight: 500;
-  }
-
-  > p {
-    margin: 0px;
-  }
-
-  > input {
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-
-  > ul {
-    margin-top: 8px;
-    margin-bottom: 8px;
-  }
 }
