--- a/src/components/PlaylistRow/PlaylistRow.module.scss
+++ b/src/components/PlaylistRow/PlaylistRow.module.scss
@@ -2,22 +2,24 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 5px;
   flex: 1 1 0px;
+  margin: 0.5em 1em;
+  user-select: none;
 
-  .leftWrapper {
+  .overlay {
     display: flex;
 
-    img {
-      min-width: 60px;
-      min-height: 60px;
+    .cover {
+      min-width: 70px;
+      min-height: 70px;
       align-self: center;
+      margin-right: 0.7em;
     }
 
     .textWrapper {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
       width: inherit;
       margin-left: 5px;
 
@@ -30,6 +32,8 @@
         table-layout: fixed;
         width: 100%;
         word-wrap: break-word;
+        color: #fefefe;
+        font-weight: 700;
       }
 
       .subInfo {
@@ -41,19 +45,24 @@
         p {
           font-size: 10pt;
           margin: 0px;
+          color: #b3b3b3;
+          font-weight: 600;
         }
       }
     }
-  }
 
-  input[type="checkbox"] {
-    align-self: center;
-    /* Double-sized Checkboxes */
-    -ms-transform: scale(1.5); /* IE */
-    -moz-transform: scale(1.5); /* FF */
-    -webkit-transform: scale(1.5); /* Safari and Chrome */
-    -o-transform: scale(1.5); /* Opera */
-    transform: scale(1.5);
-    margin: 1em;
+    .checkImg {
+      fill: #fefefe;
+      height: 40px;
+      width: 40px;
+      align-self: center;
+    }
+  }
+}
+
+.playlistRow:active {
+  .overlay {
+    background-color: #121212;
+    opacity: 0.7;
   }
 }
