--- a/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
+++ b/src/components/PlaylistCombiner/PlaylistCombiner.module.scss
@@ -21,19 +21,24 @@
 
   > p {
     align-self: center;
-    margin-bottom: 3em;
-    margin-left: 1vw;
-    margin-right: 1vw;
+    margin-bottom: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
   }
 
   .loginButton {
     margin-top: 2em;
     align-self: center;
-  }
-
-  input {
-    max-width: 250px;
-    margin-bottom: 8px;
+    background-color: #1db954;
+    border-style: none;
+    opacity: 1;
+    padding: 0;
+    border-radius: 25px;
+    height: 50px;
+    width: 180px;
+    font-weight: 600;
+    color: white;
+    font-size: 12pt;
   }
 
   .horWraper {
@@ -51,17 +56,80 @@
       p {
         margin-top: 0px;
       }
+
+      .controls {
+        display: flex;
+        flex-direction: row;
+        margin: 0.5em 1em;
+        justify-content: space-between;
+
+        .filter {
+          color: #b3b3b3;
+          background-color: #282828;
+          border-style: none;
+          height: 2em;
+          padding: 0.2em 1em;
+          border-radius: 5px;
+          font-size: 12pt;
+          font-weight: 600;
+          width: -moz-available;
+          width: -webkit-fill-available;
+          margin-right: 1em;
+        }
+
+        .clearBtn {
+          color: #b3b3b3;
+          background-color: #282828;
+          border-style: none;
+          height: 2em;
+          padding: 0.2em 1em;
+          border-radius: 5px;
+          font-size: 12pt;
+          font-weight: 600;
+        }
+      }
+
+      .loadingPlaylists {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 2em;
+
+        text {
+          margin-top: 0.5em;
+          color: #b3b3b3;
+        }
+      }
     }
 
     .createButton {
       position: fixed;
-      right: 3em;
+      right: 1em;
       bottom: 3em;
       background-color: #1db954;
       border-style: none;
-      opacity: 100%;
-      animation-name: fadeIn;
-      animation-duration: 1s;
+      opacity: 1;
+      width: 50px;
+      height: 50px;
+      padding: 0;
+      border-radius: 25px;
+      transition: opacity 0.5s;
+
+      > img {
+        width: 50px;
+        height: 50px;
+      }
+    }
+
+    .hide {
+      opacity: 0;
+      transition: opacity 0.5s;
+      position: fixed;
+      right: 1em;
+      bottom: 3em;
+      background-color: #1db954;
+      border-style: none;
       width: 50px;
       height: 50px;
       padding: 0;
@@ -70,30 +138,6 @@
       > img {
         width: 50px;
         height: 50px;
-      }
-    }
-
-    .msg2 {
-      opacity: 100%;
-      animation-name: fadeOut;
-      animation-duration: 1s;
-    }
-
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 1;
-      }
-    }
-
-    @keyframes fadeOut {
-      0% {
-        opacity: 1;
-      }
-      100% {
-        opacity: 0;
       }
     }
   }
